# Darwin-Platform

./: Anchor.toml  CONVERSATION-SUMMARY.md  Cargo.toml  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  README-COMPLETE.md  README-DEPLOYMENT.md  README.md  bulletproof-deploy.ps1  bulletproof-solution.html  check-balance.js  create-vault.html  demo.html  deploy-auto.ps1  deploy-final.js  deploy-local.js  deploy-robust.js  deploy-testnet.js  deploy-via-frontend.html  deploy-with-existing-wallet.js  deploy-with-phantom.js  deploy.bat  deploy.ps1  deployment-info.json  deployment-keypair.json  final-test.html  get-test-sol.js  index.html  package-lock.json  package.json  server.js  setup-gh-pages.md  tailwind.config.js  test-deployment.html  test-spl-token.html  try-multiple-faucets.js  working-deployment-test.html  working-solution.html
.github/workflows/: deploy.yml
programs/darwin-distributor/: Cargo.toml
programs/darwin-distributor/src/: lib.rs
programs/darwin-token/: Cargo.toml
programs/darwin-token/src/: lib.rs
programs/darwin-treasury/: Cargo.toml
programs/darwin-treasury/src/: lib.rs
scripts/: deploy-complete.ts  deploy.ts
src/: App.tsx  deploy.html  index.css  main.tsx
src/components/: Header.tsx
src/pages/: Auction.tsx  Dashboard.tsx  Fundraising.tsx  TokenCreation.tsx  WinningView.tsx
src/utils/: solana.ts
tests/: darwin-tests.ts
