[package]
name = "darwin-treasury"
version = "0.1.0"
description = "Darwin Platform Treasury Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darwin_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0" 